WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99427
[EFL][WK2] Fix Cache Model API tests
https://bugs.webkit.org/show_bug.cgi?id=99427
Summary
[EFL][WK2] Fix Cache Model API tests
Jongseok Yang
Reported
2012-10-16 00:29:20 PDT
Cache Model API tests caused "Segmentation fault"
Attachments
Patch
(3.71 KB, patch)
2012-10-16 00:34 PDT
,
Jongseok Yang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jongseok Yang
Comment 1
2012-10-16 00:34:18 PDT
Created
attachment 168877
[details]
Patch
WebKit Review Bot
Comment 2
2012-10-16 00:58:19 PDT
Comment on
attachment 168877
[details]
Patch Clearing flags on attachment: 168877 Committed
r131424
: <
http://trac.webkit.org/changeset/131424
>
WebKit Review Bot
Comment 3
2012-10-16 00:58:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug