[EFL][WK2] Fix Cache Model API tests https://bugs.webkit.org/show_bug.cgi?id=99427

Patch by Jongseok Yang <js45.yang@samsung.com> on 2012-10-16
Reviewed by Gyuyoung Kim.

Cache Model API tests caused "Segmentation fault" because the default value
for cache model was incorrect.

Fix the default value for cache model.
Fix Cache Model API tests.

* UIProcess/API/efl/ewk_context.h:
* UIProcess/API/efl/tests/test_ewk2_context.cpp:
(TEST_F):

Canonical link: https://commits.webkit.org/117389@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131424 268f45cc-cd09-0410-ab3c-d52691b4dbfc